# shedskin

./: .gitignore  CMakeLists.txt  CODE_REVIEW.md  CODE_REVIEW_TODOS.md  CPP_MODULE_REFACTOR.md  FIXES_SUMMARY_2025-10-16.md  IMPLEMENTATION_SUMMARY.md  Makefile  PATH_TRAVERSAL_FIX_2025-10-16.md  SECURITY_FIX_2025-10-16.md  TECHNICAL_DEBT_ANALYSIS_2025-10-16.md  TODO.md  TYPE_HINTS_2025-10-16.md  mypy.ini  pyproject.toml
.github/workflows/: ci.yml
docs/dev/: ALL_FIXES_2025-10-16.md  CPP_MODULE_REFACTOR.md  CSTYLE_CAST_FIX_2025-10-16.md  ERROR_HANDLING_FIX_2025-10-16.md  FIXES_COMPLETE_2025-10-16.md  IMPLEMENTATION_9.2_SUMMARY.md  PHASE1_COMPLETE_2025-10-16.md  TECHNICAL_DEBT_ANALYSIS_2025-10-16.md  UNIT_TESTS_2025-10-16.md  all-fixes-2025-10-16.md  cpp-module-refactor.md  cstyle-cast-fix-2025-10-16.md  error-handling-fix-2025-10-16.md  fixes-complete-2025-10-16.md  fixes-summary-2025-10-16.md  implementation-9.2-summary.md  implementation-summary.md  path-traversal-fix-2025-10-16.md  phase1-complete-2025-10-16.md  security-fix-2025-10-16.md  shedskin-changes.diff  technical-debt-analysis-2025-10-16.md  type-hints-2025-10-16.md  unit-tests-2025-10-16.md
examples/: .gitignore
examples/amaze/: CMakeLists.txt
scripts/: install_conan.sh
shedskin/: __init__.py  cmake.py  compiler_config.py  config.py  cpp.py  error.py  exceptions.py  extmod.py  graph.py  infer.py  makefile.py  path_security.py  python.py  stats.py  subprocess_utils.py  virtual.py
shedskin/cpp/: __init__.py  declarations.py  expressions.py  helpers.py  namer.py  output.py  statements.py  templates.py  visitor.py
shedskin/lib/builtin/: bytes.cpp  dict.hpp  exception.hpp  format.cpp  iter.hpp  list.hpp  set.hpp  str.cpp  tuple.hpp
shedskin/lib/os/: __init__.hpp
shedskin/resources/cmake/: CMakeLists.txt
shedskin/resources/conan/: conanfile2.txt
tests/: CMakeLists.txt
tests/scripts/: spm_install.py
tests/test_builtin_sorted/: CMakeLists.txt
tests/test_mod_array/: test_mod_array.py
tests/test_mod_datetime/: test_mod_datetime.py
tests/test_mod_re/: test_mod_re.py
tests/unit/: __init__.py  test_compiler_config.py  test_error.py  test_exceptions copy.py  test_exceptions.py  test_global_info.py  test_path_security.py  test_subprocess_utils.py
unit_tests/: README.md  __init__.py  conftest.py
