[project]
name = "shedskin"
version = "0.9.10"
description = "Shed Skin is a restricted-Python-to-C++ compiler."
authors = [
  {name = "Mark Dufour and contributors" }
]
license = "GPL-3.0-or-later"
readme = "README.rst"
requires-python = ">=3.8"
dependencies = [
    # conan = "1.62.0"
]

homepage = "https://shedskin.github.io"
repository = "https://github.com/shedskin/shedskin"
documentation = "https://shedskin.readthedocs.io"

classifiers = [
    "Topic :: Software Development :: Compilers",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

packages = [
    { include = "shedskin" },
]

include = [
    { path = "shedskin/lib/*.cpp", format = ["sdist", "wheel"] },
    { path = "shedskin/lib/*.hpp", format = ["sdist", "wheel"] },
    { path = "shedskin/lib/builtin/*.cpp", format = ["sdist", "wheel"] },
    { path = "shedskin/lib/builtin/*.hpp", format = ["sdist", "wheel"] },
    { path = "shedskin/lib/*.py", format = ["sdist", "wheel"] },
    { path = "shedskin/lib/os/*.cpp", format = ["sdist", "wheel"] },
    { path = "shedskin/lib/os/*.hpp", format = ["sdist", "wheel"] },
    { path = "shedskin/lib/os/*.py", format = ["sdist", "wheel"] },
    { path = "shedskin/resources/flags/FLAGS*", format = ["sdist", "wheel"] },
    { path = "shedskin/resources/illegal/illegal.txt", format = ["sdist", "wheel"] },
    { path = "shedskin/resources/cmake/*.cmake", format = ["sdist", "wheel"] },
    { path = "shedskin/resources/cmake/*.txt", format = ["sdist", "wheel"] },
    { path = "shedskin/resources/conan/*.txt", format = ["sdist", "wheel"] },

	{ path = "LICENSE", format = ["sdist"] },
    { path = "pyproject.toml", format = ["sdist"] },
    { path = "requirements.txt", format = ["sdist"] },
    { path = "setup.py", format = ["sdist"] },
    { path = "tox.ini", format = ["sdist"] },

    { path = "doc", format = ["sdist"] },
    { path = "examples", format = ["sdist"] },
    { path = "tests", format = ["sdist"] },
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

[project.scripts]
shedskin = 'shedskin.__main__:run'

[build-system]
requires = ["poetry-core>=2,<3"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/shedskin/shedskin/issues"
